# claude-toolkit

./: .gitignore  Cargo.toml  LICENSE  Makefile  ONBOARDING.md  README.ja.md  README.md  deny.toml  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/ccmap/: Cargo.toml  README.md
crates/ccmap/src/: frontmatter.rs  lib.rs  main.rs  model.rs  ui.rs
crates/ccmap/src/discover/: mcp.rs  mod.rs  plugins.rs
crates/ccstat/: Cargo.toml  README.md
crates/ccstat/src/: jsonl.rs  lib.rs  live.rs  main.rs  model.rs  pricing.rs  provenance.rs  scan.rs  ui.rs  usage.rs
crates/cctk/: Cargo.toml
crates/cctk/src/: chart.rs  fuzzy.rs  jsonl.rs  lib.rs  paths.rs  pricing.rs  tail.rs  viz.rs
crates/cctop/: Cargo.toml
crates/cctop/src/: agents.rs  app.rs  main.rs  now.rs  overview.rs  run.rs  store.rs
crates/ccwatch/: Cargo.toml  README.md
crates/ccwatch/src/: jsonl.rs  lib.rs  main.rs  pricing.rs  session.rs  stats.rs  summary.rs  ui.rs  watcher.rs
docs/superpowers/specs/: 2026-07-14-ccmap-design.md
