[package]
name = "ccstat"
version = "0.1.1"
description = "Terminal dashboard of Claude Code model/agent/skill/command/MCP usage across sessions"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[[bin]]
name = "ccstat"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ccmap = { path = "../ccmap", version = "0.1.1" }
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
