[package]
name = "cctk"
version = "0.1.1"
description = "Shared core for the claude-toolkit tools (JSONL schema, pricing, path/tail helpers)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
# `tail` enables the tokio poll-tail. Pure consumers (fuzzy/viz in later
# phases) depend on cctk with default features and never pull in tokio.
default = []
tail = ["dep:tokio", "dep:futures"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
