[package]
name = "cctop"
version = "0.2.0"
description = "Unified bottom-style TUI dashboard for Claude Code (live usage, stats, and config map)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[[bin]]
name = "cctop"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ccmap = { path = "../ccmap", version = "0.2.0" }
ccstat = { path = "../ccstat", version = "0.2.0" }
cctk = { path = "../cctk", version = "0.2.0", features = ["tail"] }
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
