[package]
name = "ccwatch"
version = "0.1.1"
description = "Real-time terminal monitor for Claude Code session usage"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]
name = "ccwatch"
path = "src/lib.rs"

[[bin]]
name = "ccwatch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cctk = { path = "../cctk", version = "0.1.1", features = ["tail"] }
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
